<resources>
    <string name="app_name">People App</string>
    <string name="labelLastname">Lastname:</string>
    <string name="labelGender">Gender:</string>
    <string name="labelHeight">Height:</string>
    <string name="buttonSave">Save</string>
    <string name="buttonReset">Clear</string>
    <string name="labelFirstname">Firstname:</string>
    <string name="caption">P E O P L E</string>
    <string name="buttonShowLog">Show Log</string>
    <string name="back">Back</string>
    <string name="gotoPersonInput">Person Input</string>
    <string name="gotoPersonDemoInput">Person Demo Input</string>
    <string name="gotoPeopleList">People List</string>
    <string name="gotoDeletePerson">Delete Person</string>
    <string name="deletePersonButton">Delete</string>
    <string name="website">Web Site</string>
    <string name="buttonPeopleListWithService">People List with Service</string>
</resources>
