<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".PeopleMainActivity">

    <Button
        android:id="@+id/buttonGotoPersonInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="doNavigationToPersonInput"
        android:text="@string/gotoPersonInput" />

    <Button
        android:id="@+id/buttonGotoPeopleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="doNavigationToPeopleList"
        android:text="@string/gotoPeopleList" />

    <Button
        android:id="@+id/buttonGotoDeletePerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="doNavigationToDeletePerson"
        android:text="@string/gotoDeletePerson" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="showServerWebSite"
        android:text="@string/website" />

</LinearLayout>